# software-metrics-machine

./: .coveragerc  .dependency-cruiser.cjs  .dockerignore  .eslintrc.json  .flake8  .gitignore  .npmignore  .npmrc  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.dist  Dockerfile.e2e  Dockerfile.pipeline  README.md  analysis-example.sh  app.py  cli.py  conftest.py  conftest_types.py  docker-compose.yml  envvars.for.actions  eslint.config.mjs  fetch-codemaat.sh  mypy.ini  package-lock.json  package.json  plot-codemaat.sh  plot-git-code.sh  plot-github-pipeline.sh  plot-github-prs.sh  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  run-analysis.sh  run-chat.sh  run-cli.sh  run-codemaat.sh  (+18 more)
acceptance/: metrics.sh  metrics_test.sh
api/: .dockerignore  Dockerfile.pipeline  README.md  conftest.py  mypy.ini  pyproject.toml  run-all-test.sh  run-chat.sh  run-cli.sh  run-dashboard.sh  run-docker.sh  run-full-analysis.sh  run-rest.sh  run-test.sh
codemaat/: coupling.py  entity-effort.py  entity-ownership.py  pyproject.toml
dashboard/: insights_section.py  pipeline_section.py  prs_section.py  source_code_section.py
docs/: README.md  api-examples.md  codemaat.md  dashboard-overview.md  dashboard.md  features.md  getting-started.md  github.md  index.md  jira.md  markdown-examples.md  package-lock.json  package.json  pydriller.md  supported-providers.md  tools.md  what-is-smm.md  your-first-analysis-with-github.md  your-first-analysis.md
github/: base_repository.py  docker-compose.yml  github_client.py  pyproject.toml
(+884 files in other folders)
